examples/test/testpolicy13448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13448
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key45: value11
      key8: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value39
          key41: value45
          key16: value47
      podSelector:
        matchLabels:
          key48: value47
          key6: value28
